overflow fix

--- a/src/components/Dashboard/styles.module.scss
+++ b/src/components/Dashboard/styles.module.scss
@@ -150,7 +150,7 @@
         }
       }
       .activeT {
-        height: calc(100vh - 414px);
+        height: calc(100vh - 415px);
         overflow-y: auto;
         .todayS {
           h6 {
